Added File Size and Ordered User in the UserIndex action alphabetically by UserName

--- a/Download/Views/Product/Create.cshtml
+++ b/Download/Views/Product/Create.cshtml
@@ -10,7 +10,7 @@
 
 }
 
-<h2>Create Product</h2>
+<h2 style="background-color: #808080; color: #ffffff;">Create Product</h2>
 
 <div style="background-color: rgba(255, 255, 255, 0.23); border: 2px solid #ffffff" class="clearfix form-horizontal">
     @using (Html.BeginForm("Create", "Product", new { searchString = search, page = pageNum }, FormMethod.Post, new { enctype = "multipart/form-data" }))
