--- a/Download/Views/Product/Edit.cshtml
+++ b/Download/Views/Product/Edit.cshtml
@@ -55,7 +55,7 @@
                 @foreach (var version in Model.Versions)
                 {
 
-                    <tr >
+                    <tr style="border: 2px">
                         <td>
                             @version.VersionName
                         </td>
