--- a/Download/Views/Product/_SearchPartial.cshtml
+++ b/Download/Views/Product/_SearchPartial.cshtml
@@ -28,28 +28,28 @@
     }
 
 
-    <table class="table table-hover col-md-12" style="background-color: rgba(255, 255, 255, 0.00);">
+    <table class="table table-hover" style="background-color: rgba(255, 255, 255, 0.00);">
 
         @foreach (var item in Model)
         {
 
 
-            <tr style="background-color: rgba(255, 255, 255, 0.50); border: 2px;" class="hidebutton">
-                <td style="font-size: larger; font-style: initial" class="row">
+            <tr style="background-color: rgba(255, 255, 255, 0.50); border: 2px;">
+                <td style="font-size: larger;" class="col-md-4">
                     @item.ProductName
                 </td>
-                <td>
+                <td class="col-md-4">
                     @using (Html.BeginForm("Display", "Product", new { id = item.ProductId, searchString = search, page = pageNum }))
                     {
-                        <input type="submit" value="Download" class="btn btn-block"  />
+                        <input type="submit" value="Download" class="btn btn-block" />
                     }
                 </td>
 
                 @if (User.IsInRole("admin") == true)
                 {
-                    <td class="row ">
-                            @Html.ActionLink("Edit", "Edit", new { id = item.ProductId, searchString = search, page = pageNum }, new { @style = "color: inherit;" }) |
-                            @Html.ActionLink("Remove", "Remove", new { id = item.ProductId, searchString = search, page = pageNum }, new { @style = "color: inherit;" })
+                    <td class="col-md-2 col-md-offset-2 row">
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ProductId, searchString = search, page = pageNum }, new { @style = "color: inherit;" }) |
+                        @Html.ActionLink("Remove", "Remove", new { id = item.ProductId, searchString = search, page = pageNum }, new { @style = "color: inherit;" })
                     </td>
                 }
 
