--- a/Download/Views/Shared/_Layout.cshtml
+++ b/Download/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Stonefin Downloads", "Index", "Product", new { searchString = (string)null, page = 1 }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Stone Fin Downloads", "Index", "Product", new { searchString = (string)null, page = 1 }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
