--- a/Download/Views/Account/Manage.cshtml
+++ b/Download/Views/Account/Manage.cshtml
@@ -6,10 +6,10 @@
     ViewBag.Title = "Manage Account";
 }
 @*Default view*@
-<h2>@ViewBag.Title.</h2>
+<h2 style="margin-bottom: 0px; background-color: #434d89; color: #ffffff; margin-left: -15px; margin-right: -15px;">@ViewBag.Title.</h2>
 
-<p class="text-success" style="background-color: rgba(255, 255, 255, 0.40)">@ViewBag.StatusMessage</p>
-<div class="row" style="background-color: rgba(255, 255, 255, 0.25); border: 2px solid #ffffff">
+<p class="text-success" style="background-color: rgba(255, 255, 255, 0.40); margin-bottom: 0px; margin-top: 0px; margin-left: -15px; margin-right: -15px;">@ViewBag.StatusMessage</p>
+<div class="row" style="background-color: rgba(255, 255, 255, 0.25); border: 2px solid #ffffff; margin-top: 0px;">
     <div class="col-md-12">
         @if (ViewBag.HasLocalPassword)
         {
