--- a/Download/Views/Account/_ChangePasswordPartial.cshtml
+++ b/Download/Views/Account/_ChangePasswordPartial.cshtml
@@ -7,8 +7,8 @@
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password</h4>
-    <hr />
+    <h4 style="margin-bottom: 0px;">Change Password</h4>
+    <hr style="margin-top: 0px;"/>
     @Html.ValidationSummary()
     <div class="form-group">
         @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
