--- a/Download/Views/Product/Display.cshtml
+++ b/Download/Views/Product/Display.cshtml
@@ -18,45 +18,39 @@
     @if (Model.Versions.Count() > 0)
     {
 
-        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-bottom: 0px; ">
+        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-bottom: 0px; padding-bottom: 2px; padding-left: 3px;">
 
 
-            @foreach (var version in Model.Versions)
-            {
+
                 <div class="form-group">
                     <div class="col-md-2">
-                        <b>@Html.DisplayNameFor(model => version.VersionName)</b>
+                        <b>@Html.DisplayNameFor(model => Model.Versions[0].VersionName)</b>
                     </div>
                     <div class="col-md-2">
-                        @Html.Encode(version.VersionName)
+                        @Html.Encode(Model.Versions[0].VersionName)
                     </div>
                 </div>
-                break;
-            }
 
-            @foreach (var date in Model.Versions)
-            {
+
                 <div class="form-group">
                     <div class="col-md-2">
                         <b>@Html.Encode("Date Uploaded")</b>
                     </div>
                     <div class="col-md-2">
-                        @Html.DisplayFor(model => date.DateCreated)
+                        @Html.DisplayFor(model => Model.Versions[0].DateCreated)
                     </div>
                 </div>
-                break;
-            }
+
             <div class="text-danger">@ViewBag.Message</div>
 
-            @foreach (var version in Model.Versions)
-            {
 
-                foreach (var arch in version.Archives)
+
+                @foreach (var arch in Model.Versions[0].Archives)
                 {
                     if (arch.Installer != null)
                     {
 
-                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Installer, verId = version.VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
+                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Installer, verId = Model.Versions[0].VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
                         {
                             <b>@arch.Installer</b> <span>(@arch.InstallerSize KB)</span>
                             <br />
@@ -67,7 +61,7 @@
                     if (arch.Exe != null)
                     {
 
-                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Exe, verId = version.VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
+                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Exe, verId = Model.Versions[0].VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
                         {
                             <b>@arch.Exe</b> <span>(@arch.ExeSize KB)</span>
                             <br />
@@ -76,49 +70,45 @@
                     }
 
                 }
-                break;
-            }
-            <br />
+
+
 
         </div>
         <br />
-        <div class="clearfix form-group" style="margin-bottom: 0px;">
-            @if (Model.Versions[0].ExtraFiles.Count() != 0)
-            {
+        if (Model.Versions[0].ExtraFiles.Count() != 0)
+        {
+            <div class="clearfix form-group" style="margin-bottom: 0px;">
+
                 <h5 style="margin-bottom: 0px; margin-top: 0px; background-color: #808080; color: #ffffff;">Extra Files</h5>
-            }
-        </div>
-        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-top: 0px; margin-bottom: 0px;">
 
-            @foreach (var version in Model.Versions)
-            {
+            </div>
+            <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-top: 0px; margin-bottom: 0px;">
 
 
-                foreach (var ex in version.ExtraFiles)
-                {
-                    if (ex != null)
+                    @foreach (var ex in Model.Versions[0].ExtraFiles)
                     {
-                        <div class="col-md-3">
+                        if (ex != null)
+                        {
+                            <div class="col-md-3">
 
-                            <b> @Html.DisplayFor(model => ex.FileName) </b>
-                            (@ex.FileSize KB)
-                            @using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = ex.FileName, fileId = ex.ExtraFileId, verId = version.VersionId, searchString = search, page = pageNum }, FormMethod.Post))
-                            {
+                                <b> @Html.DisplayFor(model => ex.FileName) </b>
+                                (@ex.FileSize KB)
+                                @using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = ex.FileName, fileId = ex.ExtraFileId, verId = Model.Versions[0].VersionId, searchString = search, page = pageNum }, FormMethod.Post))
+                                {
 
-                                <input type="submit" value="Download" class="btn btn-sm" />
+                                    <input type="submit" value="Download" class="btn btn-sm" />
 
-                            }
-                            <i>@Html.DisplayFor(model => ex.FileDescription)</i><br />
-                        </div>
+                                }
+                                <i>@Html.DisplayFor(model => ex.FileDescription)</i><br />
+                            </div>
+                        }
                     }
-                }
 
 
-                break;
-            }
+            </div>
+            <br />
+        }
 
-        </div>
-        <br />
         if (Model.Versions.Count() > 1)
         {
             <div class="clearfix form-group" style="margin-bottom: 0px;">
@@ -158,7 +148,7 @@
 
 
 
-            <div style="margin-left: 20px">
+            <div style="margin-left: 20px; margin-right: 20px">
                 @*Display the Markdown readme that was converted to html*@
                 @Html.Raw(file)
             </div>
@@ -177,7 +167,5 @@ else
     @*Display another register teaser if they are not members yet*@
     <h3>@ViewBag.Message2</h3>
 }
-<br />
-<p>
+
     @Html.ActionLink("Back to List", "Index", new { searchString = search, page = pageNum })
-</p>
