--- a/Download/Views/Product/Display.cshtml
+++ b/Download/Views/Product/Display.cshtml
@@ -10,7 +10,8 @@
 
 }
 
-<h2 style="margin-bottom: 0px; background-color: #808080; color: #ffffff;">@Model.ProductName</h2>
+<h2 style="margin-bottom: 0px; ">@Model.ProductName</h2>
+<hr style="margin-top: 0px;" />
 
 @*Check to see if there are any versions available for display/download*@
 <div class="body-content form-horizontal clearfix" style="margin-top: 0px;">
@@ -18,58 +19,62 @@
     @if (Model.Versions.Count() > 0)
     {
 
-        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-bottom: 0px; padding-bottom: 2px; padding-left: 3px;">
+        <div class="form-group clearfix" style="margin-bottom: 0px; padding-bottom: 4px; padding-left: 3px;">
 
 
 
-                <div class="form-group">
-                    <div class="col-md-2">
-                        <b>@Html.DisplayNameFor(model => Model.Versions[0].VersionName)</b>
-                    </div>
-                    <div class="col-md-2">
-                        @Html.Encode(Model.Versions[0].VersionName)
-                    </div>
+            <div class="form-group">
+                <div class="col-md-2">
+                    <b>@Html.DisplayNameFor(model => Model.Versions[0].VersionName)</b>
                 </div>
-
-
-                <div class="form-group">
-                    <div class="col-md-2">
-                        <b>@Html.Encode("Date Uploaded")</b>
-                    </div>
-                    <div class="col-md-2">
-                        @Html.DisplayFor(model => Model.Versions[0].DateCreated)
-                    </div>
+                <div class="col-md-2">
+                    @Html.Encode(Model.Versions[0].VersionName)
                 </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-2">
+                    <b>@Html.Encode("Date Uploaded")</b>
+                </div>
+                <div class="col-md-2">
+                    @Html.DisplayFor(model => Model.Versions[0].DateCreated)
+                </div>
+            </div>
 
             <div class="text-danger">@ViewBag.Message</div>
 
+            <br />
 
-
-                @foreach (var arch in Model.Versions[0].Archives)
+            @foreach (var arch in Model.Versions[0].Archives)
+            {
+                if (arch.Installer != null)
                 {
-                    if (arch.Installer != null)
+
+                    using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Installer, verId = Model.Versions[0].VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
                     {
+                        <b>@arch.Installer</b> <span>(@arch.InstallerSize KB)</span>
+                        <br />
+                        <button type="submit" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-download"></span> Download Installer
+                        </button>
 
-                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Installer, verId = Model.Versions[0].VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
-                        {
-                            <b>@arch.Installer</b> <span>(@arch.InstallerSize KB)</span>
-                            <br />
-                            <input type="submit" value="Download Installer" class="btn btn-primary" style="margin-bottom: 4px;" />
-
-                        }
                     }
-                    if (arch.Exe != null)
-                    {
-
-                        using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Exe, verId = Model.Versions[0].VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
-                        {
-                            <b>@arch.Exe</b> <span>(@arch.ExeSize KB)</span>
-                            <br />
-                            <input type="submit" value="Download Exe" class="btn btn-primary" />
-                        }
-                    }
-
                 }
+                if (arch.Exe != null)
+                {
+
+                    using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = arch.Exe, verId = Model.Versions[0].VersionId, archId = arch.ArchiveId, searchString = search, page = pageNum }, FormMethod.Post, new { @class = "col-md-3" }))
+                    {
+                        <b>@arch.Exe</b> <span>(@arch.ExeSize KB)</span>
+                        <br />
+                        <button type="submit" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-download"></span> Download Exe
+                        </button>
+                    }
+                }
+
+            }
 
 
 
@@ -79,30 +84,33 @@
         {
             <div class="clearfix form-group" style="margin-bottom: 0px;">
 
-                <h5 style="margin-bottom: 0px; margin-top: 0px; background-color: #808080; color: #ffffff;">Extra Files</h5>
+                <h5 style="margin-bottom: 0px; margin-top: 0px;">Extra Files</h5>
+                <hr style="margin-top: 0px;" />
 
             </div>
-            <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-top: 0px; margin-bottom: 0px;">
+            <div class="form-group clearfix" style="margin-top: 0px; margin-bottom: 0px;">
 
 
-                    @foreach (var ex in Model.Versions[0].ExtraFiles)
+                @foreach (var ex in Model.Versions[0].ExtraFiles)
+                {
+                    if (ex != null)
                     {
-                        if (ex != null)
-                        {
-                            <div class="col-md-3">
+                        <div class="col-md-3">
 
-                                <b> @Html.DisplayFor(model => ex.FileName) </b>
-                                (@ex.FileSize KB)
-                                @using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = ex.FileName, fileId = ex.ExtraFileId, verId = Model.Versions[0].VersionId, searchString = search, page = pageNum }, FormMethod.Post))
-                                {
+                            <b> @Html.DisplayFor(model => ex.FileName) </b>
+                            (@ex.FileSize KB)
+                            @using (Html.BeginForm("Download", "Product", new { id = Model.Id, fileName = ex.FileName, fileId = ex.ExtraFileId, verId = Model.Versions[0].VersionId, searchString = search, page = pageNum }, FormMethod.Post))
+                            {
 
-                                    <input type="submit" value="Download" class="btn btn-sm" />
+                                <button type="submit" class="btn btn-sm">
+                                    <span class="glyphicon glyphicon-download"></span> Download
+                                </button>
 
-                                }
-                                <i>@Html.DisplayFor(model => ex.FileDescription)</i><br />
-                            </div>
-                        }
+                            }
+                            <i>@Html.DisplayFor(model => ex.FileDescription)</i><br />
+                        </div>
                     }
+                }
 
 
             </div>
@@ -113,11 +121,11 @@
         {
             <div class="clearfix form-group" style="margin-bottom: 0px;">
 
-                <h5 style="margin-bottom: 0px; margin-top: 0px; background-color: #808080; color: #ffffff;">Archived Versions</h5>
-
+                <h5 style="margin-bottom: 0px; margin-top: 0px; ">Archived Versions</h5>
+                <hr style="margin-top: 0px;" />
 
             </div>
-            <div style="border: 2px solid #ffffff; border-top: 0px; margin-top: 0px; margin-bottom: 0px;" class="clearfix form-group">
+            <div style="border-top: 0px; margin-top: 0px; margin-bottom: 0px;" class="clearfix form-group">
                 @*If there is more than just the version being shown up above, display links to the additional versions*@
 
 
@@ -141,9 +149,10 @@
         }
 
         <div class="clearfix form-group" style="margin-bottom: 0px;">
-            <h5 style="margin-bottom: 0px; margin-top: 0px; background-color: #808080; color: #ffffff; ">Read Me</h5>
+            <h5 style="margin-bottom: 0px; margin-top: 0px; ">Read Me</h5>
+            <hr style="margin-top: 0px;" />
         </div>
-        <div class="form-group clearfix" style="border: 2px solid #ffffff; margin-top: 0px">
+        <div class="form-group clearfix" style="margin-top: 0px">
 
 
 
@@ -168,4 +177,4 @@ else
     <h3>@ViewBag.Message2</h3>
 }
 
-    @Html.ActionLink("Back to List", "Index", new { searchString = search, page = pageNum })
+@Html.ActionLink("Back to List", "Index", new { searchString = search, page = pageNum })
