Adding License and ReadMe and added extra comments

--- a/Download/Views/Users/Create.cshtml
+++ b/Download/Views/Users/Create.cshtml
@@ -5,6 +5,8 @@
 @using System.Web.Mvc
 @using Download.Models
 
+@*This view is not used becuase creating a user is as easy as registering*@
+
 @{
     ViewBag.Title = "Create";
 }
