--- a/Download/Content/Site.css
+++ b/Download/Content/Site.css
@@ -43,3 +43,27 @@ input[type="checkbox"].input-validation-error {
 .container{
 }
 
+.btn-block:hover {
+    background-color: #ffffff;
+    color: #434d89;
+    border-color: #434d89;
+
+}
+.btn-sm,
+.btn-xs {
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+  border-color: #333333;
+}
+.btn-sm:hover {
+    background-color: rgba(0, 0, 0, 0.25);
+    border-color: #1b1b1b;
+}
+.table-hover > tbody > tr:hover > td,
+.table-hover > tbody > tr:hover > th {
+  background-color: #434d89;
+  color: #ffffff;
+
+}
