--- a/Download/Views/Product/Index.cshtml
+++ b/Download/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<div style="background-color: #434d89; border: 2px solid #ffffff; padding-left: 2em; " class="text-white">
+<div style="background-color: #434d89; border: 2px solid #ffffff; padding-left: 2em; " class="text-white;">
     <h2>Welcome to Stone Fin Tech Downloads!</h2>
     @if (User.IsInRole("admin") == true || User.IsInRole("member") == true)
     {
