--- a/Download/Content/bootstrap.css
+++ b/Download/Content/bootstrap.css
@@ -335,13 +335,12 @@ textarea {
 }
 
 a {
-  color: #4c63e9;
+  color: #428bca;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  background-color: rgba(255, 255, 255, 0.20);
   color: #2a6496;
   text-decoration: underline;
 }
@@ -387,7 +386,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #434d89;
+  border-top: 1px solid #eeeeee;
 }
 
 .sr-only {
@@ -428,9 +427,6 @@ cite {
 
 .text-muted {
   color: #999999;
-}
-.text-white{
-    color: #ffffff;
 }
 
 .text-primary {
@@ -785,7 +781,6 @@ pre code {
 
 .container:after {
   clear: both;
-  color: #100e42
 }
 
 .row {
@@ -1434,15 +1429,6 @@ th {
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
-.hidebutton{
-padding: inherit;
-}
-.hidebutton .hidehover {
-    visibility:hidden;
-}
-.hidebutton:hover .hidehover {
-    visibility:visible;
-}
 
 .table thead > tr > th {
   vertical-align: bottom;
@@ -1464,7 +1450,6 @@ padding: inherit;
 
 .table .table {
   background-color: #ffffff;
-
 }
 
 .table-condensed thead > tr > th,
@@ -1497,20 +1482,12 @@ padding: inherit;
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #f9f9f9;
-  
-}
-
-.table-hover > tbody > tr:hover {
-      border: 2px solid #ffffff;
 }
 
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-  background-color: #434d89;
-  color: #ffffff;
-
+  background-color: #f5f5f5;
 }
-
 
 table col[class*="col-"] {
   display: table-column;
@@ -2114,8 +2091,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #434d89;
-  border-color: #ffffff;
+  background-color: #428bca;
+  border-color: #357ebd;
 }
 
 .btn-primary:hover,
@@ -2123,9 +2100,9 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #434d89;
-  background-color: #ffffff;
-  border-color: #434d89;
+  color: #ffffff;
+  background-color: #3276b1;
+  border-color: #285e8e;
 }
 
 .btn-primary:active,
@@ -2368,11 +2345,6 @@ fieldset[disabled] .btn-link:focus {
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
-  border-color: #333333;
-}
-.btn-sm:hover {
-    background-color: rgba(0, 0, 0, 0.25);
-    border-color: #1b1b1b;
 }
 
 .btn-xs {
@@ -2384,19 +2356,6 @@ fieldset[disabled] .btn-link:focus {
   width: 100%;
   padding-right: 0;
   padding-left: 0;
-  background-color:#434d89;
-  border-color: #ffffff;
-  color: #ffffff;
-}
-
-.btn-block:hover {
-    background-color: #ffffff;
-    color: #434d89;
-    border-color: #434d89;
-
-}
-btn-block:active{
-    color: #ffffff;
 }
 
 .btn-block + .btn-block {
@@ -4213,8 +4172,6 @@ textarea.input-group-sm > .input-group-btn > .btn {
   right: 0;
   left: 0;
   border-width: 0 0 1px;
-  border-color: #000000;
-
 }
 
 @media (min-width: 768px) {
